mvc routes functional

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Tech-Blog</title>
 </head>
 
@@ -16,7 +17,7 @@
             <button>logout</button>
             <button id="createBtn"> Create Post</button>
             {{else}}
-            <a href="/login">login</a>
+            <a href="/login" id="loginBtn">login</a>
             {{/if}}
         </nav>
     </header>
