--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,6 @@
 <div>
-    <h1> Welcome to Tech-Blog!</h1>
     <h2>Please log-in</h2>
-    <form>
+    <form id="loginForm">
         <label for="email-login">Enter your Email:</label><br>
         <input type='text' id="email-login" name="email-login"><br>
         <label for="password-login">Enter your Password:</label><br>
@@ -9,5 +8,12 @@
         <button type="submit">Login!</button>
     </form>
     <h2> or Sign up !</h2>
+    <form id="signUpForm">
+        <label for="email-login">Enter your Email:</label><br>
+        <input type='text' id="email-login" name="email-login"><br>
+        <label for="password-login">Enter your Password:</label><br>
+        <input type='password' id="password-login" name="password-login"><br>
+        <button type="submit">Sign-up!</button>
+    </form>
 
 </div>
