--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,19 @@
 <h1>Latest Blogs:</h1>
+{{#each blogs as |blog|}}
+<div class="blogContainer">
+    <div class="blogDiv">
+        <h2>
+            <a href="/blog/{{blog.id}}">{{blog.title}}</a>
+        </h2>
+        <p>
+            {{blog.body}}
+        </p>
+        <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+    </div>
+    <div class="col-md-7">
+        <p>
+            {{project.description}}
+        </p>
+    </div>
+</div>
+{{/each}}
