--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Tech-Blog</title>
+    <title>{{title}}</title>
 </head>
 
 <body>
     <header>
-        <h1> Welcome to Tech-Blog!</h1>
+        <h1> Tech-Blog</h1>
         <nav>
             {{#if logged_in}}
             <a href="/profile">profile</a> |
