--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,46 @@
-<div>
-    <h2>Please log-in</h2>
-    <form id="loginForm">
-        <label for="email-login">Enter your Email:</label><br>
-        <input type='text' id="email-login" name="email-login"><br>
-        <label for="password-login">Enter your Password:</label><br>
-        <input type='password' id="password-login" name="password-login"><br>
-        <button type="submit">Login!</button>
-    </form>
-    <h2> or Sign up !</h2>
-    <form id="signUpForm">
-        <label for="email-login">Enter your Email:</label><br>
-        <input type='text' id="email-login" name="email-login"><br>
-        <label for="password-login">Enter your Password:</label><br>
-        <input type='password' id="password-login" name="password-login"><br>
-        <button type="submit">Sign-up!</button>
-    </form>
+<div class="forms">
+    <div class="loginDiv">
+        <h2>Login</h2>
 
+        <form class="form login-form">
+            <div class="form-group">
+                <label for="email-login">email:</label>
+                <input class="form-input" type="text" id="email-login" />
+            </div>
+            <div class="form-group">
+                <label for="password-login">password:</label>
+                <input class="form-input" type="password" id="password-login" />
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" type="submit" id="logInBtn">login</button>
+            </div>
+        </form>
+    </div>
+    <div class="signUpDiv">
+        <h2>Signup</h2>
+
+        <form class="form signup-form">
+            <div class="form-group">
+                <label for="name-signup">name:</label>
+                <input class="form-input" type="text" id="name-signup" />
+            </div>
+            <div class="form-group">
+                <label for="username-signup">username: </label>
+                <input class="form-input" type="text" id="username-signup" />
+            </div>
+            <div class="form-group">
+                <label for="email-signup">email:</label>
+                <input class="form-input" type="text" id="email-signup" />
+            </div>
+            <div class="form-group">
+                <label for="password-signup">password:</label>
+                <input class="form-input" type="password" id="password-signup" />
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" type="submit" id="signUpBtn">signup</button>
+            </div>
+        </form>
+    </div>
 </div>
+
+<script src="./js/login.js"></script>
