--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,8 +29,43 @@ body {
     width: 200px;
 }
 
-h1 {
+.h1 {
     color: aqua;
-    text-decoration-thickness: 100px;
+    font-size: 30px;
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 4px;
+    text-decoration: none;
+    text-align: center;
+    transition: background-color 0.3s ease;
+}
 
+.h1:hover {
+    background-color: aquamarine;
+    color: rgb(46, 32, 20);
+
+}
+
+.btn {
+    background-color: rgb(46, 32, 20);
+    border: none;
+    border-radius: 5px;
+    color: aquamarine;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+}
+
+.btn:hover {
+    background-color: aquamarine;
+    color: rgb(46, 32, 20);
+    padding: 5px 10px;
+}
+
+#newBlogArea {
+    position: relative;
+    left: 500px;
+    top: 100px;
 }
