--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,16 @@
+<header>
+    <nav>
+        {{#if logged_in}}
+        <a class="btn" href="/profile">profile</a> |
+        <button class="btn" type="submit " id="logoutBtn">logout</button>
+        <a href="/publish" class="btn" id="createBtn"> Publish a New Post</a>
+        {{else}}
+        <a class="btn" href="/login" id="logInBtn">login</a>
+        {{/if}}
+    </nav>
+
+</header>
+
 <h1>Latest Blogs:</h1>
 {{#if blogs}}
 
@@ -24,3 +37,5 @@
 <h2> No Blogs Yet!</h2>
 <p> Log in to make a post :)</p>
 {{/if}}
+
+<script src="./js/logout.js"></script>
