--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,22 +15,25 @@
 {{#if blogs}}
 
 {{#each blogs as |blog|}}
-<div class="homeBlogContainer">
-    <div class="homeBlogDiv">
-        <h2>
-            <a href="/blog/{{blog.id}}">{{blog.title}}</a>
-        </h2>
-        <p>
-            {{blog.body}}
-        </p>
-        <p>Created by {{blog.username}} on {{format_date blog.date_created}}</p>
+<section class="blogSpace">
+    <div class="homeBlogContainer">
+        <div class="homeBlogDiv">
+            <div class="homeBlogHeader">
+                <h2 class="homeBlogTitle">
+                    <a class="homeBlogTitle" href="/blog/{{blog.id}}">{{blog.title}}</a>
+                </h2>
+                <p>Written by {{blog.user.name}} on {{format_date blog.date_created}}</p>
+            </div>
+
+        </div>
+        <div class="homeBlogDescDiv">
+            <p class="blogPreview">
+                {{blog_Preview blog.body}}
+            </p>
+        </div>
     </div>
-    <div class="homeBlogDescDiv">
-        <p>
-            {{blog_Preview blog.body}}
-        </p>
-    </div>
-</div>
+</section>
+
 {{/each}}
 
 {{else}}
