--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -28,30 +28,13 @@
         </div>
         <div class="homeBlogDescDiv">
             <p class="blogPreview">
-                {{blog_Preview blog.body}}
+                {{ blog.body}}
             </p>
         </div>
-        <!--{/if}}-->
-
-
-
     </div>
 </section>
-{{#if blog.comment}}
-{{#each blog.comment as |comment|}}
-<div class="comments">
-    <p>
-        {{comment}}
-    </p>
-</div>
 {{/each}}
-{{else}}
-<div class="comments">
-    <h2 id="noComment">No Comments on This Post Yet..</h2>
-</div>
-{{/if}}
 
-{{/each}}
 
 {{else}}
 <h2> No Blogs Yet!</h2>
