--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,6 +68,39 @@ body {
         min-width: 120px;
         padding: 0 25px;
     }
+
+    #deleteBtn {
+        min-width: 120px;
+        padding: 0 25px;
+    }
+}
+
+#deleteBtn {
+    background-color: #d60000;
+    border: 2px solid #000000;
+    border-radius: 30px;
+    box-shadow: #570b01 4px 4px 0 0;
+    color: #570b01;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 0 10px;
+    line-height: 40px;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+#deleteBtn:hover {
+    background-color: #f2b8b8;
+}
+
+.deleteBtn:active {
+    box-shadow: #000000 2px 2px 0 0;
+    transform: translate(2px, 2px);
 }
 
 
@@ -82,6 +115,12 @@ body {
 .homeBlogContainer {
     border: 2px solid rgb(46, 32, 20);
 
+}
+
+.commentContainter {
+    border: 2px solid rgb(46, 32, 20);
+    width: 45%;
+    margin-top: 10px;
 }
 
 
