--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a class="h1" href="/"> Tech-Blog - Home</a>
+        <a class="btn" href="/"> Tech-Blog - Home</a>
     </header>
     <main>
         {{{body}}}
